src/scss/sidebar.scss
@import "_color";

.sidebar {
  display: flex;
  flex-direction: column;

  width: 260px;

  z-index: 1;

  &.collapsed {
    animation: sidebar-collapsed 0.5s 1 forwards;

    @keyframes sidebar-collapsed {
      from {
        width: 260px;
      }
      to {
        width: 50px;
      }
    }
  }

  &.collapsed {
    & .sidebar-header {
      padding: 0 0.2rem;

      & .brand {
        animation: brand-move-left 0.5s 1 forwards;

        @keyframes brand-move-left {
          to {
            width: 0;

            opacity: 0;

            transform: translateX(-75px);
          }
        }
      }

      & .sidebar-control {
        margin: auto;
      }
    }

    & .sidebar-wrapper {
      padding-top: 43px;

      & li.has-children {
        .tree {
          height: 0;
        }
        .tree-item {
          padding: 14px 16px;
        }
      }

      & li.header,
      & i.tree-icon,
      & span {
        display: none;
      }
    }
  }

  &.expanded {
    & .sidebar-header {
      & .brand {
        animation: brand-move-right 0.6s 1 forwards;

        @keyframes brand-move-right {
          from {
            width: 0;

            opacity: 0;

            transform: translateX(-75px);
          }
        }
      }

      & .sidebar-control {
        margin-left: auto;
      }
    }

    & .sidebar-wrapper {
      & li.header,
      & i.tree-icon,
      & span {
        display: block;
      }
    }

    animation: sidebar-expanded .6s 1 forwards;

    @keyframes sidebar-expanded {
      0% {
        width: 50px;
      }
      80% {
        width: 250px;
      }
      100% {
        width: 260px;
      }
    }
  }

  & .sidebar-header {
    display: flex;
    align-items: center;

    padding: 0 1rem;

    min-height: 70px;

    background: $secondary;
    box-shadow: 0 0 5px 3px rgba($dark, 0.05);

    z-index: 9;

    & .brand {
      font-family: "Nunito", sans-serif;
      font-weight: bold;
      font-size: 1.5rem;
      color: $dark;
      line-height: 1rem;
    }

    & .sidebar-control {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      margin-left: auto;

      min-height: 30px;
      min-width: 30px;

      background: $primary;
      border-radius: 2px;

      color: white;

      cursor: pointer;
    }
  }

  & .sidebar-wrapper {
    flex: 1;

    box-shadow: 0 0 5px 3px rgba($dark, 0.05);
    background: $dark;

    color: $light;

    overflow-x: hidden;
    overflow-y: auto;

    & .list-menu {
      list-style-type: none;

      margin: 0;
      padding: 0;

      & li {
        &.header {
          padding: 14px 16px;

          background: $dark;

          font-size: 0.7rem;
          color: #ffffff99;

          white-space: nowrap;

          filter: brightness(0.9);
        }

        & a {
          display: flex;
          justify-content: space-between;
          align-items: center;

          max-height: 45px;

          text-decoration: none;
          color: $light;

          &:hover {
            background: rgba($light, 0.05);
          }

          & i,
          .right-container {
            height: 45px;
            min-width: 50px;

            line-height: 45px;
            text-align: center;
          }

          & > span {
            flex: 1;
          }

          & .right-container {
            display: flex;
            justify-content: center;
            align-items: center;

            & .notification {
              margin: 0;
            }
          }
        }

        &.active a {
          position: relative;

          background: $primary;

          color: $light;
        }

        & span {
          white-space: nowrap;
        }

        & span.notification {
          margin-top: 2px;
          padding: 1px 8px;

          height: 18px;
          width: fit-content;

          background: teal;
          border-radius: 8px;

          font-size: 0.7rem;
          color: white;
          line-height: 18px;
        }

        &.has-children {
          &.active {
            & .tree {
              max-height: 400px;
              transition: max-height 0.5s ease-in;
            }
          }

          &.active a {
            margin-bottom: 0;

            border-color: transparent;
          }

          & .tree {
            list-style-type: none;

            margin: 0;
            padding: 0;

            max-height: 0;

            background: $light;

            overflow: hidden;
            transition: max-height 0.5s ease-out;

            & .tree-item {
              border: none;

              & a {
                background: white;

                &:hover {
                  background: rgba($primary, 0.1);
                }

                &.active {
                  background: $secondary;
                }

                & span,
                & i {
                  color: $dark;
                }
              }
            }
          }
        }
      }
    }
  }
}

@media (max-width: 575.98px) {
  .sidebar {
    position: relative;
    height: 0;
    width: 0;

    z-index: 10;

    &.collapsed {
      animation: unset;

      & .sidebar-header {
        padding-left: 0;
        padding-right: 0;
      }

      & .sidebar-header,
      & .sidebar-wrapper {
        animation: sidebar-collapsed-mobile .7s 1 forwards;

        & .brand {
          animation: unset;
        }
      }

      @keyframes sidebar-collapsed-mobile {
        from {
          width: 74.5vw;
        }
        to {
          transform: translateX(-100vw);
        }
      }
    }

    &.expanded {
      animation: unset;

      & .sidebar-header {
        padding-left: 1rem;
        padding-right: 0.5rem;
      }

      & .sidebar-header,
      & .sidebar-wrapper {
        animation: sidebar-expanded-mobile 0.7s 1 forwards;
      }

      @keyframes sidebar-expanded-mobile {
        from {
          transform: translateX(-100vw);
        }
        to {
          width: 74.5vw;
        }
      }
    }

    & .sidebar-header {
      position: absolute;
      top: 0;
      left: 0;

      padding-left: 0;
      padding-right: 0;

      width: 0;

      overflow: hidden;

      & .sidebar-control i::before {
        content: "\f342";
      }
    }

    & .sidebar-wrapper {
      position: absolute;
      top: 70px;
      left: 0;

      height: calc(100vh - 70px);
      width: 0;
    }
  }
}

